# Data-Structures-and-Algorithms

./: .gitignore  Doxyfile  LICENSE  README.md
Docs/How to use data structures/: BasicStringExamples.md
Source/: CMakeLists.txt  main.cpp
Source/Algorithms/: Copying.tpp
Source/Algorithms/Copying/: Copying.tpp
Source/Benchmarks/: CMakeLists.txt
Source/Benchmarks/Benchmarks/: StringBenchmarks.cpp
Source/Benchmarks/lib/: CMakeLists.txt
Source/DataStructures/String/: String.cpp  String.hpp  StringIterator.hpp
Source/DataStructures/String/BasicString/: BasicString.cpp  BasicString.hpp
Source/Examples/: CMakeLists.txt  main.cpp
Source/Examples/String/: BasicStringExamples.hpp
Source/Tests/: CMakeLists.txt
Source/Tests/StringTests/: StringTests.cpp
